fix loading on mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,98 +64,91 @@
     @apply flex items-center gap-2 font-semibold px-2 pr-5 mx-2 py-2 rounded-md text-slate-900 cursor-pointer hover:bg-slate-100;
 }
 
-/* Loading */
+/* Loader */
 
-/* Loading Mobile */
-.mobile div:after {
-    background: #fed;
-}
-/* Loading MD Screnn */
-.md-screen div:after {
-    background: black;
-}
-
-.lds-roller {
+.lds-default {
     display: inline-block;
     position: relative;
     width: 80px;
     height: 80px;
 }
-.lds-roller div {
-    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    transform-origin: 40px 40px;
-}
-.lds-roller div:after {
-    content: " ";
-    display: block;
+.lds-default div {
     position: absolute;
-    width: 7px;
-    height: 7px;
+    width: 6px;
+    height: 6px;
+    background: #38bdf8;
     border-radius: 50%;
-    margin: -4px 0 0 -4px;
+    animation: lds-default 1.2s linear infinite;
 }
-.lds-roller div:nth-child(1) {
-    animation-delay: -0.036s;
+.lds-default div:nth-child(1) {
+    animation-delay: 0s;
+    top: 37px;
+    left: 66px;
 }
-.lds-roller div:nth-child(1):after {
-    top: 63px;
-    left: 63px;
+.lds-default div:nth-child(2) {
+    animation-delay: -0.1s;
+    top: 22px;
+    left: 62px;
 }
-.lds-roller div:nth-child(2) {
-    animation-delay: -0.072s;
+.lds-default div:nth-child(3) {
+    animation-delay: -0.2s;
+    top: 11px;
+    left: 52px;
 }
-.lds-roller div:nth-child(2):after {
-    top: 68px;
-    left: 56px;
+.lds-default div:nth-child(4) {
+    animation-delay: -0.3s;
+    top: 7px;
+    left: 37px;
 }
-.lds-roller div:nth-child(3) {
-    animation-delay: -0.108s;
+.lds-default div:nth-child(5) {
+    animation-delay: -0.4s;
+    top: 11px;
+    left: 22px;
 }
-.lds-roller div:nth-child(3):after {
-    top: 71px;
-    left: 48px;
+.lds-default div:nth-child(6) {
+    animation-delay: -0.5s;
+    top: 22px;
+    left: 11px;
 }
-.lds-roller div:nth-child(4) {
-    animation-delay: -0.144s;
+.lds-default div:nth-child(7) {
+    animation-delay: -0.6s;
+    top: 37px;
+    left: 7px;
 }
-.lds-roller div:nth-child(4):after {
-    top: 72px;
-    left: 40px;
+.lds-default div:nth-child(8) {
+    animation-delay: -0.7s;
+    top: 52px;
+    left: 11px;
 }
-.lds-roller div:nth-child(5) {
-    animation-delay: -0.18s;
+.lds-default div:nth-child(9) {
+    animation-delay: -0.8s;
+    top: 62px;
+    left: 22px;
 }
-.lds-roller div:nth-child(5):after {
-    top: 71px;
-    left: 32px;
+.lds-default div:nth-child(10) {
+    animation-delay: -0.9s;
+    top: 66px;
+    left: 37px;
 }
-.lds-roller div:nth-child(6) {
-    animation-delay: -0.216s;
+.lds-default div:nth-child(11) {
+    animation-delay: -1s;
+    top: 62px;
+    left: 52px;
 }
-.lds-roller div:nth-child(6):after {
-    top: 68px;
-    left: 24px;
+.lds-default div:nth-child(12) {
+    animation-delay: -1.1s;
+    top: 52px;
+    left: 62px;
 }
-.lds-roller div:nth-child(7) {
-    animation-delay: -0.252s;
-}
-.lds-roller div:nth-child(7):after {
-    top: 63px;
-    left: 17px;
-}
-.lds-roller div:nth-child(8) {
-    animation-delay: -0.288s;
-}
-.lds-roller div:nth-child(8):after {
-    top: 56px;
-    left: 12px;
-}
-@keyframes lds-roller {
-    0% {
-        transform: rotate(0deg);
-    }
+@keyframes lds-default {
+    0%,
+    20%,
+    80%,
     100% {
-        transform: rotate(360deg);
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
     }
 }
 
